Sun Dec 31 18:08:16 UTC 2006  Iliyan Jeliazkov  <jeliazkov_i@>

        * tests/TransportCurrent/IIOP/IIOP_Server_Request_Interceptor.cpp:

          Disambiguating Transport::CurrentTest::ContextTag to
          Test::Transport::CurrentTest::ContextTag to aid Borland's compiler.

Sun Dec 31 17:27:27 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/TransportCurrent/Framework/ORBInitializer_T.cpp:

          Adding a trivial default implementation of post_init.

        * tests/TransportCurrent/Framework/Server_Request_Interceptor.h:
        * tests/TransportCurrent/Framework/server.cpp:

          Moved an #include from the header to the cpp file, where it
          belongs.

        * tests/TransportCurrent/IIOP/IIOP.mpc:

              Added a "Template_Files" section to explicitely make
          ORBInitializer.cpp available.

Fri Dec 29 22:31:08 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tao/TransportCurrent/Current_Loader.cpp:

          Cleanup.

        * tao/TransportCurrent/IIOP_Current_Impl.cpp:

          Replaced static_cast<>with a dynamic_cast<> in handler().

        * tests/TransportCurrent/Framework/Client_Request_Interceptor.cpp:
        * tests/TransportCurrent/Framework/Framework.mpc:

          Whitespace cleanup.

        * tests/TransportCurrent/Framework/ORBInitializer_T.h:
        * tests/TransportCurrent/Framework/ORBInitializer_T.cpp:

          Cleaned up template declarations and moved themplate code to a
          cpp file.

        * tests/TransportCurrent/Framework/Server_Request_Interceptor.h:
        * tests/TransportCurrent/Framework/Server_Request_Interceptor.cpp:

          Updated includes and removed unnecessary code.

        * tests/TransportCurrent/Framework/client.cpp:

          Added code to handle TAO_HAS_MINIMUM_CORBA by disabling DII.

        * tests/TransportCurrent/IIOP/IIOP.mpc:

          Whitespace cleanup.

        * tests/TransportCurrent/IIOP/IIOP_Tester.cpp:
